kubernetes/infrastructure/traefik/config/middleware-lan-only.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ipAllowList:
    sourceRange:
      - 10.69.0.0/16
