kubernetes/infrastructure/traefik/config/dashboard-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: traefik
spec:
  redirectRegex:
    regex: ^https://traefik\.mirkwood\.casa/$
    replacement: https://traefik.${DOMAIN_0}/dashboard/
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${DOMAIN_0}`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: traefik
        - name: dashboard-redirect
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
